rename sqlite file name

--- a/Customers.Api/appsettings.json
+++ b/Customers.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "ConnectionString": "Data Source=./customer.db"
+    "ConnectionString": "Data Source=./customer.sqlite"
   },
   "Logging": {
     "LogLevel": {
